--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <a href="#" class="button">Home</a>
+    <a href="#" class="button">Contact</a>
+    <a href="#" class="button">About Me</a>
+
     <script src="app.js"></script>
   </body>
 </html>
